# heimdallr

./: .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-v3-images.yml
backend/: .gitignore  CLAUDE.md  Dockerfile  init_db.py  main.py  pyproject.toml
backend/heimdallr/api/: api.py  auth.py  base.py  channels.py  competable.py  groups.py  push.py  users.py  version.py  webhook.py
backend/heimdallr/auth/: dependencies.py  jwt.py
backend/heimdallr/channel/: apprise.py  bark.py  base.py  chanify.py  dingtalk.py  discord.py  email.py  factory.py  lark.py  ntfy.py  pushdeer.py  pushme.py  pushover.py  quote0.py  telegram.py  wecom.py
backend/heimdallr/config/: config.py
backend/heimdallr/database/: database.py  schemas.py
backend/heimdallr/entity/: association_tables.py  channel.py  group.py  user.py
backend/heimdallr/model/: channel_model.py  group_model.py  user_model.py
backend/heimdallr/services/: auth_service.py  channel_service.py  config_service.py  group_service.py  update_service.py  user_service.py
backend/heimdallr/shared/: config.py
deploy/: .env.example  dev.docker-compose.yaml  docker-compose.prod.yaml  nginx.prod.conf
deploy/mysql/: init.sql
docs/: QUICK_START.md
docs/deploy/: Docker.md
frontend/: .env.example  CLAUDE.md  Dockerfile  i18next-scanner.config.cjs  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/scripts/: check-i18n.js  clean-i18n.js  i18n-workflow.js  validate-examples-simple.js
frontend/src/: App.tsx
frontend/src/components/: app-sidebar.tsx
frontend/src/config/: codeExamples.ts
frontend/src/contexts/: AppProviders.tsx  AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useVersion.ts
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/pages/: DashboardPage.tsx  ProfilePage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  authService.ts  channelService.ts  groupService.ts  versionService.ts
frontend/src/types/: api.ts  auth.ts  channel.ts  group.ts
(+30 files in other folders)
